New in version 1.0.1
====================

   Minor changes:

   - Temporarily added suppressWarnings() in polarPlot() around the calls to 
     radial.plot() since warnings appeared for example("radial.plot") in
     plotrix v3.4-6.

   - Updated CITATION information.

   - Fixed typos in DESCRIPTION and piano-package.Rd.

   - Updated the man file for loadGSC().

   - Added URL in DESCRIPTION.


New in version 1.0.0
====================

   Important changes:

   - Removed the arguments 'venn', 'heatmap' and 'polarPlot' from diffExp and 
     replaced them with a new argument: 'plot'.

   - The consensusScores function now does not return its result invisibly.

   - The argument order in consensusScores has changed: 'plot' has been moved 
     from last place to after 'method'.

   Minor changes:

   - Added citation DOI to vignette.

   - Fixed bug in geneSetSummary when no directions are available.

   - Updated the man page for consensusScores, added correct output description.

   - Fixed a bug in diffExp() regarding the result table, when gene names 
     (annotation) are not available

   - Fixed a bug in diffExp() so that the heatmap shows gene names if available, 
     otherwise the probeset IDs

   - Updated the Description field text in the DESCRIPTION file.

   - Removed man page for internal functions.

   - Removed contrastName as output from runGSA and geneSetSummary, including 
     man pages.

   - Changed the man page for consensusHeatmap clarifying that the cutoff 
     argument is consensus score (not rank)

   - Updated the man page for loadGSC, clarifying the input.

   - Reworked the vignette to fit Bioconductor, removed section on R 
     introduction.

   - Change name of folder for example data from exampleData to extdata, and 
     updated man pages and vignette.

   - Changed so that total number of gene-level statistics are printed during 
     run, instead of total number of unique genes.
